First signs of gameplay

--- a/meson.build
+++ b/meson.build
@@ -7,17 +7,20 @@ dxc = find_program('dxc', required: true)
 spv_gen = generator(dxc, output: '@BASENAME@.spv', arguments: ['-spirv', '-fvk-use-gl-layout', '-fspv-reflect', '@EXTRA_ARGS@', '-Fo', '@OUTPUT@', '@INPUT@'])
 
 vshaders = spv_gen.process([
-	'src/shaders/block.vs.hlsl'
+	'src/shaders/block.vs.hlsl',
+	'src/shaders/plat.vs.hlsl'
 ], extra_args: [ '-T', 'vs_6_0' ])
 
 pshaders = spv_gen.process([
-	'src/shaders/block.ps.hlsl'
+	'src/shaders/block.ps.hlsl',
+	'src/shaders/plat.ps.hlsl'
 ], extra_args: [ '-T', 'ps_6_0' ])
 
 launch = shared_module('launch', name_prefix: '', dependencies: cacao_dep, include_directories: 'include', sources: [
 	'src/ThretrisMain.cpp',
 	'src/Thretris.cpp',
 	'src/Thretromino.cpp',
+	'src/GameMgr.cpp',
 	vshaders,
 	pshaders
 ], build_by_default: true)
